--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </head>
 
   <body>
-    <p></p>
-    <canvas id ="my-canvas"></canvas>
+    <canvas id ="my-canvas">Press space to start</canvas>
   </body>
 </html>
